# portable-app-framework

./: .Rhistory  .buildinfo  .gitignore  .pypirc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  RELEASE.md  genindex.html  intro.html  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  deploy_docs.yml  publish-docs.yaml  publish-package.yml  python-publish-testpypi.yml  python-pypi.yml  python-testpypi.yml
_sources/: intro.md
_sources/tutorials/: example.ipynb
apar/: __init__.py
app/: README.md
app/app_e/: README.md  analyze.py  config.yaml
app/app_preprocessing/: config.yaml
config/libraries/: Brick-nightly.ttl
config/logger/: dev.ini
config/manifest/: APAR_OperationalModes.ttl  SDAHU_FDD.ttl  basic_ahu_components.ttl  boptest_style.ttl  buildingMOTIF_tutorial_validation.ttl  example_shape.ttl  stuck_damper1.ttl  vav-cooling-only.ttl
config/query/: example.rq
data/: SDAHU.ttl  SDAHU_test.ttl  parquet_converter.py
data/AHU_EXAMPLE/: example_model.ttl
data/LBNL_FDD_Dataset_SDAHU/: LBNL_FDD_Data_Sets_SDAHU_ttl.ttl
docs/: .$Portable App.drawio.bkp  .$framework_example.png.bkp  .$general.drawio.bkp  Portable App.drawio  _config.yml  _toc.yml  intro.md
reference/: framework.html  setup.html
results/: result.xlsx
src/: check_result_plot.R  create_new_app.py  example.ipynb  main.py  main_apar.py  main_precheck.py  main_qualify.py  visualization.R
test/: example.json  generic.py  test.py
tutorials/: example.html
utils/: logger.py  util.py  util_app.py  util_brick.py  util_check.py  util_driver.py  util_plot.py  util_preprocessing.py  util_qualify.py
(+116 files in other folders)
